# thesis

./: .gitignore  .latex.yml  LICENSE  README.md  Vagrantfile  experiments.sh
code/: __main__.py  experiment.py  springs.py  tank.py  tank2.py  tanksim.py
code/controllers/: mpc.py  pwm.py  thermostat.py
code/experiments/: auxiliary.py  cerdata.py  collector.py  mpc.py  optimise.py  thermostat.py  week.py
code/lqr-test/: lqr.py
code/models/: cristofari.py  cristofariPlus.py  halvgaard.py  springs.py  sysTo.py  tank.py  tank2.py  tank3.py
code/mpc-test/: mpc.py
code/prediction/: ambient.py  collector.py  insolation.py  load.py  load2.py
code/simulation/: __init__.py  interval.py  nonlinear.py
code/utils/: __init__.py  interval.py  options.py  report.py  time.py
cpp/: CMakeLists.txt  LICENSE  test.cpp
cvxopt-tests/: ellipse.py
data/: ambient.txt  daily_load.txt  daily_load2.txt  daily_load3.txt  get.py  insolation.txt  insolation2.txt  monthly_load.txt  plots.gp
docs/: Makefile  models.tex  proposal.tex  summaries.md
mpc-python-test/: mpc.py
proposal/: proposal.tex
report/: LICENSE  abstract.tex  acknowledgements.tex  background.tex  contribution.tex  library.bib  main.tex  review.tex  summaries.md  utils.tex
report/appendices/: code.tex  data.tex
report/chapters/: background.tex  evaluation.tex  (+5 more)
scripts/: plotData.gp  plotRho.gp  runComparison.sh  runError.sh  runHorizon.sh  runRho.sh
viewer/: index.html  package.json
vm/: .bash_profile  provision.sh  setup-acado.sh  setup-node.sh  setup-python.sh  startup-node.sh  thesis-viewer.conf
(+3 files in other folders)
